crates/ars-forms/src/snapshots/ars_forms__form_submit__tests__form_submit_button_submitting.snap
---
source: crates/ars-forms/src/form_submit.rs
expression: "snapshot_attrs(service.connect(&|_| {}).submit_button_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "submit-button",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "form-submit",
            ),
        ),
        (
            Aria(
                Disabled,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Busy,
            ),
            String(
                "true",
            ),
        ),
        (
            Disabled,
            Bool(
                true,
            ),
        ),
    ],
    styles: [],
}
