crates/ars-forms/src/snapshots/ars_forms__form_submit__tests__form_submit_root_succeeded.snap
---
source: crates/ars-forms/src/form_submit.rs
expression: "snapshot_attrs(service.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "form-submit",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "succeeded",
            ),
        ),
        (
            Id,
            String(
                "test-form",
            ),
        ),
    ],
    styles: [],
}
